test/bad/grb2_val_pal-skd-dl_last_lndscp_tsteps_gsize_bbox_proj.get
GET	/download?param=Temperature,DewPoint&producer=ecmwf_eurooppa_pinta&format=grib2&starttime=data&timesteps=4&gridsize=45,50&bbox=15,58,38,71&projection=latlon HTTP/1.0